# ChangeLog for media-sound/cuberok
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jul 2009; Davide Pesavento <davidepesa@gmail.com> cuberok-9999.ebuild,
  +files/cuberok-9999-no-automagic-deps.patch,
  +files/cuberok-ffmpeg-includes.patch, metadata.xml:
  Mostly rewritten, lots of improvements and fixes:
    - added several USE flags for the different player backends
    - taglib is needed at build-time: moved to DEPEND
    - avoid automagic deps
    - apply a patch to fix ffmpeg's include path
    - removed obsolete sed in src_prepare: libdir was fixed upstream
    - install the package under /usr
    - use upstream desktop file
    - added USE descriptions to metadata.xml
    - updated HOMEPAGE

  22 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  cuberok-0.0.10.ebuild:
  Install upstream desktop file. Style cleanup.

*cuberok-0.0.10 (20 May 2009)

  20 May 2009; Markos Chandras <hwoarang@gentoo.org> -cuberok-0.0.4a.ebuild,
  -cuberok-0.0.7.ebuild, +cuberok-0.0.10.ebuild:
  Version bump, remove old files

*cuberok-0.0.7 (02 Apr 2009)

  02 Apr 2009; Markos Chandras <hwoarang@gentoo.org> -cuberok-0.0.6.ebuild,
  +cuberok-0.0.7.ebuild:
  Version bump, remove old

*cuberok-0.0.6 (12 Mar 2009)

  12 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -files/cuberok-0.0.5_qt-4.5.patch, -cuberok-0.0.5.ebuild,
  +cuberok-0.0.6.ebuild, cuberok-9999.ebuild:
  Version bump, remove old, add mp3 use flag, fix qt4 dependences as cuberok
  now builds with qt-4.5, fixing files for proper installation on multilib systems

  03 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +files/cuberok-0.0.5_qt-4.5.patch, cuberok-0.0.5.ebuild:
  patch for cuberok-0.0.5 from svn, builds with qt-4.5 now

*cuberok-9999 (03 Mar 2009)

  03 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +cuberok-9999.ebuild:
  live ebuild for cuberok

*cuberok-0.0.4a (27 Feb 2009)
