@@ -1,7 +1,7 @@
 AUX cuberok-9999-no-automagic-deps.patch 2847 RMD160 4d9d53b790e360d43408b71ff46452a7e22743ae SHA1 ef00bade9623a6c985d37a4d59d4cc45586791b0 SHA256 2c7d07d4ea8c3e8b9c601f3b7453c7fd3a791eff145bc4ffae35b164a74fabd8
 AUX cuberok-ffmpeg-includes.patch 489 RMD160 11faf58a91153d77b217e31dae3130939a980b1e SHA1 b2c776c5612fe8a3b1e91753aec80aa9a146a607 SHA256 eafd17b097c760d96baab2955dba350daafa5436bf978b75ba70d1ad2d0a4278
 DIST cuberok-0.0.10.tar.gz 476768 RMD160 b0fdd6ef0efbe48899874f1d07f78ceb33f26036 SHA1 7cf4d8acd5278d9bdf4aa736c7f6df4207302bda SHA256 29d40ab228b940612c98954feef6d485a064f46b2b0212edbec76f2c6b525a6d
-EBUILD cuberok-0.0.10.ebuild 929 RMD160 96eef77b54f4e43dc7f5b44e7ebdb75f827fe0e0 SHA1 be18a6a3613f02b3c2768b795dd0481104a238fd SHA256 37012e1dc5fa123ded4e9430cd6fdf4ddd1a4dd10be1f294bd168c434209ceca
+EBUILD cuberok-0.0.10-r1.ebuild 663 RMD160 e5b6fcd0d6c9016acc4eb2210f679742687cb67e SHA1 f77ab900d88976dc46d9a4546572a075a8cf2fc9 SHA256 af07d1cff9cebad288f24c0ecd9ae857d6994ec392572b24416d616eefa27999
 EBUILD cuberok-9999.ebuild 1596 RMD160 10b727724d48a4322e70600caadeb54350759dd2 SHA1 39f9f7803c9cd9058a0942a61b8bd3c04878b5ab SHA256 46334775a77cb1a450d5268454972a194941fcf4dde8550907364de06416a969
-MISC ChangeLog 3037 RMD160 e9563ad5ab8cbf99554751dc0ca3c547ab6c703a SHA1 0af811c03dc308a44b586d237a88a7c74e0f102f SHA256 1c36a871f0b5f72750744bc3ec89948b05372d8cd065d5bb04518961403540c6
+MISC ChangeLog 3227 RMD160 ebaf6accdd3b5d038245cb94a8ba9183c387af62 SHA1 d5d68b35f2d1ffb90c44e82393d63bb77b34ae47 SHA256 92676cc40257313ec8c3711342b9d2d468e0867b3a1f6221d22633d69b908ed5
 MISC metadata.xml 351 RMD160 fd2dbc4ca9c6cd186435db3817b0ea068b66e758 SHA1 12bb671090237cdf6c7665bfd474d683427c4e2e SHA256 7571d49ea135c496120e827e66d80cc7bbc874b6228f62ae3a2534473590867d
