@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cuberok-0.0.10-r1 (07 Jul 2009)
+
+  07 Jul 2009; Davide Pesavento <davidepesa@gmail.com>
+  -cuberok-0.0.10.ebuild, +cuberok-0.0.10-r1.ebuild:
+  Backport some pieces of the previous commit.
+
   07 Jul 2009; Davide Pesavento <davidepesa@gmail.com> cuberok-9999.ebuild,
   +files/cuberok-9999-no-automagic-deps.patch,
   +files/cuberok-ffmpeg-includes.patch, metadata.xml:
